--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "3.1.0",
   "description": "A Minecraft server tracker that lets you focus on the basics.",
   "main": "server.js",
+  "scripts": {
+    "start": "server.js",
+  }
   "dependencies": {
     "mc-ping-updated": "0.1.0",
     "mcpe-ping-fixed": "0.0.3",
