--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Minecraft server tracker that lets you focus on the basics.",
   "main": "server.js",
   "scripts": {
-    "start": "server.js",
+    "start": "server.js"
   }
   "dependencies": {
     "mc-ping-updated": "0.1.0",
