--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "minetrack",
   "version": "3.1.0",
   "description": "A Minecraft server tracker that lets you focus on the basics.",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "mc-ping-updated": "0.1.0",
